--- a/index.html
+++ b/index.html
@@ -5,20 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Document</title>
+		<style>
+		
+		</style>
 	</head>
-	<body>
-		<p class="math"></p>
-		<button onclick()"gentratenumber"> </button> 
-		<script>
-			
-			function magic(){
-				let numner=math.floor(math.random() *20)
-				return number
-			}
-			function gentratenumber(){
-				let x= magic
-			}
-			for ()
-		</script>
-	</body>
+	
 </html>
